fix [admin-clinet]: subcategory not showing after selecting seub category
move additional componenets of add product form into seperate file
change stateHaldner form in favour of obnChangeHandler

--- a/admin-client/src/components/add-product-form/add-product-form.module.scss
+++ b/admin-client/src/components/add-product-form/add-product-form.module.scss
@@ -42,8 +42,23 @@
 
     input {
         width: 100%;
-        padding: 5px;
         margin-bottom: 20px;
-        font-size: 18px;
+        font-size: 14px;
+        border-radius: 5px;
+        padding: 10px;
+        border: 1px solid grey;
+    }
+
+    select {
+        width: 100%;
+        margin-bottom: 20px;
+        font-size: 14px;
+        border-radius: 5px;
+        padding: 10px;
+        border: 1px solid grey;
+
+        option {
+            font-size: 14px;
+        }
     }
 }
